--- a/ionic/www/templates/setup.html
+++ b/ionic/www/templates/setup.html
@@ -30,7 +30,9 @@
 		Send to Node
         </button>
         <form class="list">
-            <h4 id="setup-heading3" style="color:#000000;font-weight:600;text-align:left;">Data</h4>
+            <h4 id="setup-heading3" style="color:#000000;font-weight:600;text-align:left;">
+            Sensor Radio Code
+            </h4>
             <label class="item item-input">
                 <span class="input-label">
                 {{Text}}
