--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -34,5 +34,11 @@
             <button id="home-button31" style="text-align:left;" class=" button button-stable  button-block ">status.upcnt</button>
             <button id="home-button32" style="text-align:right;" class=" button button-stable  button-block ">{{status.upcnt}}</button>
         </div>
+        <button id="home-button" style="text-align:left;" class="button button-positive button-block " on-touch="HomeButton1()">
+		Button1
+        </button>
+       <button id="home-button" style="text-align:left;" class="button button-positive button-block " on-touch="HomeButton2()">
+		Button2
+        </button>
     </ion-content>
 </ion-view>
