--- a/ionic/www/templates/setup.html
+++ b/ionic/www/templates/setup.html
@@ -39,6 +39,9 @@
                 </span><textarea placeholder=""> </textarea>
             </label>
         </form>
+        <button id="setup-update" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupUpdateFirebase()">
+		Update Firebase
+        </button>
         <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
     </ion-content>
 </ion-view>
