--- a/ionic/www/templates/logger.html
+++ b/ionic/www/templates/logger.html
@@ -1,10 +1,11 @@
 <ion-view title="Logger" id="page3">
     <ion-content padding="true" scroll="true" class="has-header">
-        <div id="logger" ng-controller="loggerCtrl" style="color:#000000;">
-				<ion-item ng-repeat="value in logs track by $index" ng-style="{'line-height': '1px'}" style="font-size:12px;">
-					{{value}}
-				</ion-item> 
-			<ion-infinite-scroll on-infinite="doList()"></ion-infinite-scroll> 
-        </div>
+        <form class="list">
+            <h4 id="logger-heading1" style="color:#000000;font-weight:600;text-align:left;">
+            Logs:
+            </h4>
+            <p8 id="logger-heading2" style="white-space: pre; color:#000000;text-align:left;">{{logsText}}</p8>
+        </form>
+        <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
     </ion-content>
 </ion-view>
