--- a/ionic/www/templates/setup.html
+++ b/ionic/www/templates/setup.html
@@ -1,33 +1,34 @@
 <ion-view title="Setup" id="page2">
-    <ion-content padding="true" scroll="true" class="has-header">
-        <h4 id="setup-heading6" style="color:#000000;text-align:left;">Connection Status</h4>
-        <form class="list">
-            <label class="item item-input">
-                <span class="input-label">
-                    {{WSStatus}} -> {{StsTxt}}
-                </span><textarea placeholder=""> </textarea>
-            </label>
-        </form>
-        <h4 id="setup-heading5" style="color:#000000;text-align:left;">Control</h4>
-        <button id="setup-connect" style="text-align:left;" class="button button-positive  button-block icon-right ion-log-in" on-touch="SetupComCmd()">
-		{{ComButton}}
-        </button>
-        <button id="setup-configure-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
-		Node Configuration
-        </button>
-        <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{settings.text}}</p8>
-        <button id="setup-update-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
-		Send Configuration to Node
-        </button>
-        <button id="setup-update" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupInitFirebase()">
-		Initialize Firebase
-        </button>
-        <form class="list">
-            <h4 id="setup-heading3" style="color:#000000;font-weight:600;text-align:left;">
-            Acquired Radio Codes:
-            </h4>
-            <p8 id="setup-heading7" style="white-space: pre; color:#000000;text-align:left;">{{RadioListText}}</p8>
-        </form>
-        <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
-    </ion-content>
+  <ion-content padding="true" scroll="true" class="has-header">
+    <h4 id="setup-heading6" style="color:#000000;text-align:left;">Connection Status</h4>
+    <form class="list">
+      <label class="item item-input">
+        <span class="input-label">
+          {{WSStatus}} -> {{StsTxt}}
+        </span>
+        <textarea placeholder=""> </textarea>
+      </label>
+    </form>
+    <h4 id="setup-heading5" style="color:#000000;text-align:left;">Control</h4>
+    <button id="setup-connect" style="text-align:left;" class="button button-positive  button-block icon-right ion-log-in" on-touch="SetupComCmd()">
+      {{ComButton}}
+    </button>
+    <button id="setup-configure-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
+      Node Configuration
+    </button>
+    <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{settings.text}}</p8>
+    <button id="setup-update-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
+      Send Configuration to Node
+    </button>
+    <button id="setup-update" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupInitFirebase()">
+      Initialize Firebase
+    </button>
+    <form class="list">
+      <h4 id="setup-heading3" style="color:#000000;font-weight:600;text-align:left;">
+        Acquired Radio Codes:
+      </h4>
+      <p8 id="setup-heading7" style="white-space: pre; color:#000000;text-align:left;">{{RadioListText}}</p8>
+    </form>
+    <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
+  </ion-content>
 </ion-view>
