--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -20,19 +20,27 @@
         <a class="item" on-touch="pushCtrl0Change2()">
             status.alarm
             <span class="badge badge-assertive">{{status.alarm}}</span>
-          </a>
+        </a>
         <a class="item">
             status.bootcnt
             <span class="item-note">{{status.bootcnt}}</span>
-          </a>
+        </a>
         <a class="item">
             status.upcnt
             <span class="item-note">{{status.upcnt}}</span>
-          </a>
+        </a>
         <a class="item">
             status.heap
             <span class="item-note">{{status.heap}}</span>
-          </a>
+        </a>
+        <a class="item">
+            status.temperature
+            <span class="item-note">{{status.temperature}}</span>
+        </a>
+        <a class="item">
+            status.humidity
+            <span class="item-note">{{status.humidity}}</span>
+        </a>
       </div>
 
     </form>
