--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -17,7 +17,7 @@
       </ion-toggle>
 
       <div class="list">
-        <a class="item" on-touch="pushCtrl0Change2()">
+        <a class="item">
             status.alarm
             <span class="badge badge-assertive">{{status.alarm}}</span>
         </a>
@@ -42,7 +42,6 @@
             <span class="item-note">{{status.humidity}}</span>
         </a>
       </div>
-
     </form>
   </ion-content>
 </ion-view>
