--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -16,6 +16,7 @@
       <ion-list>
         <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
         <ion-item ui-sref="menu.setup" menu-close="">Setup</ion-item>
+        <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
         <ion-item ui-sref="menu.logger" menu-close="">Logger</ion-item>
       </ion-list>
     </ion-content>
