--- a/ionic/www/templates/chart.html
+++ b/ionic/www/templates/chart.html
@@ -1,12 +1,6 @@
 <ion-view title="Chart" id="page3">
-  <ion-content padding="true" scroll="false" class="has-header">
-    <div class="card">
-      <div class="item item-divider">
-        A line chart
-      </div>
-      <div class="item item-text-wrap">
-        <zingchart id = "myChart" zc-json = "myJson" zc-height = 500 zc-width = 600 ></zingchart>
-      </div>
-    </div>
+  <ion-content padding="true" scroll="true" class="has-header">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+    <zingchart id="myChart" zc-json="myJson" zc-height=500 zc-width=350></zingchart>
   </ion-content>
 </ion-view>
