RF manager and ionic refactor
RF manager not yet working in sta mode

--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -15,7 +15,8 @@
     <ion-content padding="false" class="side-menu-left has-header">
       <ion-list>
         <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
-        <ion-item ui-sref="menu.setup" menu-close="">Setup</ion-item>
+        <ion-item ui-sref="menu.firebase" menu-close="">Firebase Setup</ion-item>
+        <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
         <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
         <ion-item ui-sref="menu.logger" menu-close="">Logger</ion-item>
       </ion-list>
