--- a/ionic/www/templates/node.html
+++ b/ionic/www/templates/node.html
@@ -10,18 +10,18 @@
       </label>
     </form>
     <h4 id="setup-heading5" style="color:#000000;text-align:left;">Control</h4>
-    <button id="setup-connect" style="text-align:left;" class="button button-positive  button-block icon-right ion-log-in" on-touch="SetupComCmd()">
+    <button id="setup-connect" style="text-align:left;" class="button button-positive button-block icon-right ion-log-in" on-touch="SetupComCmd()">
       {{ComButton}}
     </button>
-    <button id="setup-configure-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
+    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
       Node Configuration
     </button>
     <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{settings.text}}</p8>
-    <button id="setup-update-node" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
+    <button id="setup-update-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
       Send Configuration to Node
     </button>
-    <button id="setup-update" style="text-align:left;" class="button button-positive  button-block icon-right ion-android-arrow-dropright" on-touch="SetupInitFirebase()">
-      Initialize Firebase
+    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupInitFirebase()">
+      Save Radio Codes
     </button>
     <form class="list">
       <h4 id="setup-heading3" style="color:#000000;font-weight:600;text-align:left;">
