--- a/ionic/www/templates/node.html
+++ b/ionic/www/templates/node.html
@@ -16,11 +16,11 @@
     <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
       Node Configuration
     </button>
-    <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{settings.text}}</p8>
+    <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{NodeSettings}}</p8>
     <button id="setup-update-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
-      Send Configuration to Node
+      Store to Node
     </button>
-    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupInitFirebase()">
+    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupRadio()">
       Save Radio Codes
     </button>
     <form class="list">
