better use of JsonVariant

--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -31,11 +31,11 @@
         </a>
         <a class="item">
             status.temperature
-            <span class="item-note">{{status.temperature}}</span>
+            <span class="item-note">{{status.temperature/10}}</span>
         </a>
         <a class="item">
             status.humidity
-            <span class="item-note">{{status.humidity}}</span>
+            <span class="item-note">{{status.humidity/10}}</span>
         </a>
       </div>
     </form>
