--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -5,6 +5,9 @@
       <ion-toggle toggle-class="toggle-assertive" ng-model="pushCtrl0.checked" ng-change="pushCtrl0Change()">
         Enable Alarm
       </ion-toggle>
+      <ion-toggle toggle-class="toggle-assertive" ng-model="pushCtrl1.checked" ng-change="pushCtrl1Change()">
+        LED Output
+      </ion-toggle>
       <ion-toggle toggle-class="toggle-assertive" ng-model="pushCtrl3.checked" ng-change="pushCtrl3Change()">
         Enable Monitoring
       </ion-toggle>
