--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -17,6 +17,7 @@
         <ion-item ui-sref="menu.home" menu-close="">Home</ion-item>
         <ion-item ui-sref="menu.firebase" menu-close="">Firebase Setup</ion-item>
         <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
+        <ion-item ui-sref="menu.radio" menu-close="">Radio Setup</ion-item>
         <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
         <ion-item ui-sref="menu.logger" menu-close="">Logger</ion-item>
       </ion-list>
