--- a/ionic/www/templates/node.html
+++ b/ionic/www/templates/node.html
@@ -10,14 +10,14 @@
       </label>
     </form>
     <h4 id="setup-heading5" style="color:#000000;text-align:left;">Control</h4>
-    <button id="setup-connect" style="text-align:left;" class="button button-positive button-block icon-right ion-log-in" on-touch="SetupComCmd()">
+    <button id="setup-connect" style="text-align:left;" class="button button-positive button-block icon-right ion-social-rss" on-touch="SetupComCmd()">
       {{ComButton}}
     </button>
     <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="showPopup()">
       Node Configuration
     </button>
     <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{NodeSettings}}</p8>
-    <button id="setup-update-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupComSend(settings)">
+    <button id="setup-update-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-upload" on-touch="SetupComSend(settings)">
       Store to Node
     </button>
     <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
