--- a/ionic/www/templates/radio.html
+++ b/ionic/www/templates/radio.html
@@ -6,9 +6,6 @@
         Enable Radio Codes Learning
       </ion-toggle>
     </form>
-    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-android-arrow-dropright" on-touch="SetupRadio()">
-      Update Radio Codes Configuration
-    </button>
     <div class="list card">
       <div class="item item-divider">
         Inactive Radio Codes
@@ -16,13 +13,13 @@
       <ion-list can-swipe="true">
         <ion-item ng-repeat="RadioCode in InactiveRadioCodes">
           <i class="icon ion-wifi"></i>
-          <ion-option-button class="button-positive" ng-click="ActivateRadioCode($index)">
+          <ion-option-button class="button-positive icon-left ion-social-rss" ng-click="ActivateRadioCode($index)">
             Activate
           </ion-option-button>
-          <ion-option-button class="button-info" ng-click="RemoveInactiveRadioCode($index)">
+          <ion-option-button class="button-info icon-left ion-trash-b" ng-click="RemoveInactiveRadioCode($index)">
             Remove
           </ion-option-button>
-          {{RadioCode.val()}}
+          {{RadioCode.val().toString(16).toUpperCase()}}
         </ion-item>
       </ion-list>
     </div>
@@ -33,15 +30,18 @@
       <ion-list <ion-list can-swipe="true">
         <ion-item ng-repeat="RadioCode in ActiveRadioCodes">
           <i class="icon ion-wifi"></i>
-          <ion-option-button class="button-positive" ng-click="DeactivateRadioCode($index)">
+          <ion-option-button class="button-positive icon-left ion-social-rss-outline" ng-click="DeactivateRadioCode($index)">
             Deactivate
           </ion-option-button>
-          <ion-option-button class="button-info" ng-click="RemoveActiveRadioCode($index)">
+          <ion-option-button class="button-info icon-left ion-trash-b" ng-click="RemoveActiveRadioCode($index)">
             Remove
           </ion-option-button>
-          {{RadioCode.val()}}
+          {{RadioCode.val().toString(16).toUpperCase()}}
         </ion-item>
       </ion-list>
     </div>
+    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-android-upload" on-touch="SetupRadio()">
+      Update Radio Codes Configuration
+    </button>
   </ion-content>
 </ion-view>
