--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -19,7 +19,7 @@
         <ion-item ui-sref="menu.node" menu-close="">Node Setup</ion-item>
         <ion-item ui-sref="menu.radio" menu-close="">Radio Setup</ion-item>
         <ion-item ui-sref="menu.chart" menu-close="">Chart</ion-item>
-        <ion-item ui-sref="menu.logger" menu-close="">Logger</ion-item>
+        <ion-item ui-sref="menu.logger" menu-close="">Log History</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
