ionic firebase init fix

--- a/ionic/www/templates/firebase.html
+++ b/ionic/www/templates/firebase.html
@@ -9,8 +9,8 @@
       Init Firebase
     </button>
     <p8 id="setup-heading6" style="white-space: pre; color:#000000;text-align:left;">{{settings.text}}</p8>
-    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right ion-refresh" on-touch="ResetFirebase()">
-      Reset Firebase
+    <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right icon-left ion-trash-b" on-touch="ResetFirebase()">
+      Reset Configuration
     </button>
     <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
   </ion-content>
