--- a/ionic/www/templates/home.html
+++ b/ionic/www/templates/home.html
@@ -39,5 +39,6 @@
         </a>
       </div>
     </form>
+    <ion-infinite-scroll on-infinite="doRefresh()"></ion-infinite-scroll>
   </ion-content>
 </ion-view>
