--- a/ionic/www/templates/firebase.html
+++ b/ionic/www/templates/firebase.html
@@ -1,10 +1,13 @@
 <ion-view title="Firebase Setup" id="page5">
   <ion-content padding="true" scroll="true" class="has-header">
-    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-settings" on-touch="showPopup()">
-      Firebase Account
+    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-settings" on-touch="showPopupFbConfig()">
+      Firebase Configuration
     </button>
-    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-settings" on-touch="showPopupAccount()">
-      Firebase Secrets
+    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-settings" on-touch="showPopupLogin()">
+      Firebase Login
+    </button>
+    <button id="setup-configure-node" style="text-align:left;" class="button button-positive button-block icon-right ion-android-settings" on-touch="showPopupFbAdminSecrets()">
+      Firebase Admin Secrets
     </button>
     <button id="setup-update" style="text-align:left;" class="button button-positive button-block icon-right icon-left ion-trash-b" on-touch="ResetFirebase()">
       Reset Configuration
